--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@ div {
 <h3>Know the amount of stock quantity you want to buy</h3>
 
 <div>
-  <form action="/action_page.php">
+  <form action="test.php">
     <label for="firststock">Enter the value of first stock</label>
     <input type="text" id="firststock" name="firststock" placeholder="enter first stock.." required>
 
@@ -51,7 +51,7 @@ div {
       <option value="300000">300000</option>
     </select>
   
-    <input type="submit" value="Submit" onclick="document.write(document.getElementById(firststock)+document.getElementById(secondstock))">
+    <input type="submit" value="Submit">
   </form>
 </div>
 
